--- a/wp-content/themes/carservice/custom.css
+++ b/wp-content/themes/carservice/custom.css
@@ -43,6 +43,23 @@
     max-width: 100vw;
 }
 
+.location-box {
+    height:60vh;
+    width: 45%;
+    padding: 0px 2.5%;
+    float:left;
+    padding-top:30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.location-title {
+    padding-bottom: 20px;
+    font-size: 24px;
+}
+
 #faq .accordion h2 {
     font-size: 2em;
     font-weight: 400;
@@ -160,6 +177,13 @@ transition: max-height 0.2s ease-out;
     }
     .descriptions {
         font-size: 18px;
+    }
+    .location-box {
+        height:50vh;
+        width: 95vw;
+    }
+    #locations-page .vc_row {
+        margin: 0 !important;
     }
 }
 
