--- a/wp-content/themes/carservice/custom.css
+++ b/wp-content/themes/carservice/custom.css
@@ -89,8 +89,8 @@
 }
 
 .tiny {
-    font-size:12px;
-    font-weight: 700;
+    font-size:18px;
+    font-weight: 550;
 }
 
 .wide-af {
@@ -151,6 +151,10 @@ transition: max-height 0.2s ease-out;
     color: white;
     font-size: 24px;
     font-weight: 500;
+}
+
+.fb-link {
+    color: blue !important;
 }
 
 /* DESKTOPS AND TABLETS */
