--- a/wp-content/themes/carservice/custom.css
+++ b/wp-content/themes/carservice/custom.css
@@ -56,8 +56,12 @@
 }
 
 .location-title {
-    padding-bottom: 20px;
+    margin-bottom: 20px;
+    padding: 0px 10px;
+    border-radius: 5px;
     font-size: 24px;
+    background-color: darkslateblue;
+    color: whitesmoke;
 }
 
 #faq .accordion h2 {
@@ -160,8 +164,15 @@ transition: max-height 0.2s ease-out;
 #prestige-tag {
     font-size: 14px;
     font-weight: 400;
-    margin-top:0;
-    padding-top:0;
+    margin-bottom: 15px;
+}
+
+.checkbox-label {
+    font-size: 12px !important;
+}
+
+.socials {
+    color: whitesmoke !important;
 }
 
 /* DESKTOPS AND TABLETS */
